--- a/Desafio-Api-Dio/appsettings.json
+++ b/Desafio-Api-Dio/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "ConexaoPadrao": "Data Source=localhost,1430; Initial Catalog=DBTarefas; User Id=SA; Password=sql@server2023 ; TrustServerCertificate=True"
+    "ConexaoPadrao": "Minha ConexaoPadrao"
   },
   "Logging": {
     "LogLevel": {
